--- a/src/styles/LyricsEditor.css
+++ b/src/styles/LyricsEditor.css
@@ -320,6 +320,7 @@
   padding: 2px 4px;
   border-radius: 3px;
   min-height: 1.2em;
+  white-space: pre-wrap;
 }
 
 .line-text-display:hover {
@@ -360,6 +361,7 @@
   background-color: rgba(52, 152, 219, 0.08);
   border-radius: 3px;
   box-sizing: border-box;
+  white-space: pre-wrap;
 }
 
 .line-input:focus {
